parser.output
   0  $accept : program $end

   1  program : decl_list

   2  decl_list : decl decl_list
   3            |

   4  decl : ident TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SCOLON
   5       | ident TOKEN_COLON TOKEN_ARRAY TOKEN_OPBRAK TOKEN_CLBRAK type2 TOKEN_ASSIGN expr TOKEN_SCOLON
   6       | ident TOKEN_COLON type TOKEN_SCOLON
   7       | ident TOKEN_COLON type TOKEN_ASSIGN TOKEN_OPBRACE stmt_list TOKEN_CLBRACE

   8  type : TOKEN_STRING
   9       | TOKEN_INTEGER
  10       | TOKEN_CHAR
  11       | TOKEN_BOOLEAN
  12       | TOKEN_ARRAY TOKEN_OPBRAK expr TOKEN_CLBRAK type
  13       | TOKEN_FUNCTION type2 TOKEN_OPPAR param_list TOKEN_CLPAR
  14       | TOKEN_VOID

  15  type2 : TOKEN_STRING
  16        | TOKEN_INTEGER
  17        | TOKEN_CHAR
  18        | TOKEN_BOOLEAN
  19        | TOKEN_ARRAY TOKEN_OPBRAK op_expr TOKEN_CLBRAK type2
  20        | TOKEN_FUNCTION type TOKEN_OPPAR param_list TOKEN_CLPAR
  21        | TOKEN_VOID

  22  param_list :
  23             | not_empty_param_list

  24  not_empty_param_list : ident TOKEN_COLON type2
  25                       | param_list2

  26  param_list2 : ident TOKEN_COLON type2 TOKEN_COMMA not_empty_param_list

  27  expr_list :
  28            | expr_list2

  29  expr_list_array : expr_list2

  30  expr_list2 : expr TOKEN_COMMA expr_list2
  31             | expr

  32  ident : TOKEN_IDENTIFIER

  33  stmt : decl
  34       | expr TOKEN_SCOLON
  35       | TOKEN_FOR TOKEN_OPPAR op_expr TOKEN_SCOLON op_expr TOKEN_SCOLON op_expr TOKEN_CLPAR stmt
  36       | TOKEN_OPBRACE stmt_list TOKEN_CLBRACE
  37       | TOKEN_IF TOKEN_OPPAR expr TOKEN_CLPAR match_stmt TOKEN_ELSE stmt
  38       | TOKEN_IF TOKEN_OPPAR expr TOKEN_CLPAR stmt
  39       | TOKEN_RETURN op_expr TOKEN_SCOLON
  40       | TOKEN_PRINT expr_list TOKEN_SCOLON

  41  match_stmt : TOKEN_IF TOKEN_OPPAR expr TOKEN_CLPAR match_stmt TOKEN_ELSE match_stmt
  42             | TOKEN_RETURN op_expr TOKEN_SCOLON
  43             | TOKEN_PRINT expr_list TOKEN_SCOLON
  44             | TOKEN_OPBRACE stmt_list TOKEN_CLBRACE
  45             | expr TOKEN_SCOLON
  46             | decl
  47             | TOKEN_FOR TOKEN_OPPAR op_expr TOKEN_SCOLON op_expr TOKEN_SCOLON op_expr TOKEN_CLPAR match_stmt

  48  stmt_list :
  49            | not_empty_stmt_list

  50  not_empty_stmt_list : stmt
  51                      | stmt_list2

  52  stmt_list2 : stmt not_empty_stmt_list

  53  op_expr :
  54          | expr

  55  expr : or_expr
  56       | expr TOKEN_ASSIGN or_expr

  57  or_expr : or_expr TOKEN_OR and_expr
  58          | and_expr

  59  and_expr : and_expr TOKEN_AND compare_expr
  60           | compare_expr

  61  compare_expr : compare_expr TOKEN_GE add_expr
  62               | compare_expr TOKEN_GT add_expr
  63               | compare_expr TOKEN_LE add_expr
  64               | compare_expr TOKEN_LT add_expr
  65               | compare_expr TOKEN_NE add_expr
  66               | compare_expr TOKEN_EQ add_expr
  67               | add_expr

  68  add_expr : add_expr TOKEN_ADD mult_expr
  69           | add_expr TOKEN_SUB mult_expr
  70           | mult_expr

  71  mult_expr : mult_expr TOKEN_MULT expo_expr
  72            | mult_expr TOKEN_DIV expo_expr
  73            | mult_expr TOKEN_MOD expo_expr
  74            | expo_expr

  75  expo_expr : expo_expr TOKEN_EXPONENTIATION unary_expr
  76            | unary_expr

  77  unary_expr : TOKEN_NOT inc_expr
  78             | TOKEN_SUB inc_expr
  79             | inc_expr

  80  inc_expr : paren TOKEN_INCREMENT
  81           | paren TOKEN_DECREMENT
  82           | paren

  83  paren : primary_expr
  84        | TOKEN_OPPAR expr TOKEN_CLPAR

  85  primary_expr : ident
  86               | ident TOKEN_OPBRAK expr TOKEN_CLBRAK array_elements
  87               | ident TOKEN_OPPAR expr_list TOKEN_CLPAR
  88               | TOKEN_INTEGER_LITERAL
  89               | TOKEN_STRING_LITERAL
  90               | TOKEN_CHARACTER_LITERAL
  91               | TOKEN_TRUE
  92               | TOKEN_FALSE
  93               | TOKEN_OPBRACE expr_list_array TOKEN_CLBRACE

  94  array_elements : TOKEN_OPBRAK expr TOKEN_CLBRAK array_elements
  95                 |

state 0
	$accept : . program $end  (0)
	decl_list : .  (3)

	TOKEN_IDENTIFIER  shift 1
	$end  reduce 3

	program  goto 2
	decl_list  goto 3
	decl  goto 4
	ident  goto 5


state 1
	ident : TOKEN_IDENTIFIER .  (32)

	.  reduce 32


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : decl_list .  (1)

	.  reduce 1


state 4
	decl_list : decl . decl_list  (2)
	decl_list : .  (3)

	TOKEN_IDENTIFIER  shift 1
	$end  reduce 3

	decl_list  goto 6
	decl  goto 4
	ident  goto 5


state 5
	decl : ident . TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SCOLON  (4)
	decl : ident . TOKEN_COLON TOKEN_ARRAY TOKEN_OPBRAK TOKEN_CLBRAK type2 TOKEN_ASSIGN expr TOKEN_SCOLON  (5)
	decl : ident . TOKEN_COLON type TOKEN_SCOLON  (6)
	decl : ident . TOKEN_COLON type TOKEN_ASSIGN TOKEN_OPBRACE stmt_list TOKEN_CLBRACE  (7)

	TOKEN_COLON  shift 7
	.  error


state 6
	decl_list : decl decl_list .  (2)

	.  reduce 2


state 7
	decl : ident TOKEN_COLON . type TOKEN_ASSIGN expr TOKEN_SCOLON  (4)
	decl : ident TOKEN_COLON . TOKEN_ARRAY TOKEN_OPBRAK TOKEN_CLBRAK type2 TOKEN_ASSIGN expr TOKEN_SCOLON  (5)
	decl : ident TOKEN_COLON . type TOKEN_SCOLON  (6)
	decl : ident TOKEN_COLON . type TOKEN_ASSIGN TOKEN_OPBRACE stmt_list TOKEN_CLBRACE  (7)

	TOKEN_STRING  shift 8
	TOKEN_INTEGER  shift 9
	TOKEN_CHAR  shift 10
	TOKEN_ARRAY  shift 11
	TOKEN_BOOLEAN  shift 12
	TOKEN_FUNCTION  shift 13
	TOKEN_VOID  shift 14
	.  error

	type  goto 15


state 8
	type : TOKEN_STRING .  (8)

	.  reduce 8


state 9
	type : TOKEN_INTEGER .  (9)

	.  reduce 9


state 10
	type : TOKEN_CHAR .  (10)

	.  reduce 10


state 11
	decl : ident TOKEN_COLON TOKEN_ARRAY . TOKEN_OPBRAK TOKEN_CLBRAK type2 TOKEN_ASSIGN expr TOKEN_SCOLON  (5)
	type : TOKEN_ARRAY . TOKEN_OPBRAK expr TOKEN_CLBRAK type  (12)

	TOKEN_OPBRAK  shift 16
	.  error


state 12
	type : TOKEN_BOOLEAN .  (11)

	.  reduce 11


state 13
	type : TOKEN_FUNCTION . type2 TOKEN_OPPAR param_list TOKEN_CLPAR  (13)

	TOKEN_STRING  shift 17
	TOKEN_INTEGER  shift 18
	TOKEN_CHAR  shift 19
	TOKEN_ARRAY  shift 20
	TOKEN_BOOLEAN  shift 21
	TOKEN_FUNCTION  shift 22
	TOKEN_VOID  shift 23
	.  error

	type2  goto 24


state 14
	type : TOKEN_VOID .  (14)

	.  reduce 14


state 15
	decl : ident TOKEN_COLON type . TOKEN_ASSIGN expr TOKEN_SCOLON  (4)
	decl : ident TOKEN_COLON type . TOKEN_SCOLON  (6)
	decl : ident TOKEN_COLON type . TOKEN_ASSIGN TOKEN_OPBRACE stmt_list TOKEN_CLBRACE  (7)

	TOKEN_SCOLON  shift 25
	TOKEN_ASSIGN  shift 26
	.  error


state 16
	decl : ident TOKEN_COLON TOKEN_ARRAY TOKEN_OPBRAK . TOKEN_CLBRAK type2 TOKEN_ASSIGN expr TOKEN_SCOLON  (5)
	type : TOKEN_ARRAY TOKEN_OPBRAK . expr TOKEN_CLBRAK type  (12)

	TOKEN_FALSE  shift 27
	TOKEN_STRING_LITERAL  shift 28
	TOKEN_CHARACTER_LITERAL  shift 29
	TOKEN_INTEGER_LITERAL  shift 30
	TOKEN_TRUE  shift 31
	TOKEN_IDENTIFIER  shift 1
	TOKEN_NOT  shift 32
	TOKEN_SUB  shift 33
	TOKEN_OPPAR  shift 34
	TOKEN_CLBRAK  shift 35
	TOKEN_OPBRACE  shift 36
	.  error

	paren  goto 37
	and_expr  goto 38
	or_expr  goto 39
	unary_expr  goto 40
	expo_expr  goto 41
	add_expr  goto 42
	mult_expr  goto 43
	expr  goto 44
	primary_expr  goto 45
	compare_expr  goto 46
	inc_expr  goto 47
	ident  goto 48


state 17
	type2 : TOKEN_STRING .  (15)

	.  reduce 15


state 18
	type2 : TOKEN_INTEGER .  (16)

	.  reduce 16


state 19
	type2 : TOKEN_CHAR .  (17)

	.  reduce 17


state 20
	type2 : TOKEN_ARRAY . TOKEN_OPBRAK op_expr TOKEN_CLBRAK type2  (19)

	TOKEN_OPBRAK  shift 49
	.  error


state 21
	type2 : TOKEN_BOOLEAN .  (18)

	.  reduce 18


state 22
	type2 : TOKEN_FUNCTION . type TOKEN_OPPAR param_list TOKEN_CLPAR  (20)

	TOKEN_STRING  shift 8
	TOKEN_INTEGER  shift 9
	TOKEN_CHAR  shift 10
	TOKEN_ARRAY  shift 50
	TOKEN_BOOLEAN  shift 12
	TOKEN_FUNCTION  shift 13
	TOKEN_VOID  shift 14
	.  error

	type  goto 51


state 23
	type2 : TOKEN_VOID .  (21)

	.  reduce 21


state 24
	type : TOKEN_FUNCTION type2 . TOKEN_OPPAR param_list TOKEN_CLPAR  (13)

	TOKEN_OPPAR  shift 52
	.  error


state 25
	decl : ident TOKEN_COLON type TOKEN_SCOLON .  (6)

	.  reduce 6


state 26
	decl : ident TOKEN_COLON type TOKEN_ASSIGN . expr TOKEN_SCOLON  (4)
	decl : ident TOKEN_COLON type TOKEN_ASSIGN . TOKEN_OPBRACE stmt_list TOKEN_CLBRACE  (7)

	TOKEN_FALSE  shift 27
	TOKEN_STRING_LITERAL  shift 28
	TOKEN_CHARACTER_LITERAL  shift 29
	TOKEN_INTEGER_LITERAL  shift 30
	TOKEN_TRUE  shift 31
	TOKEN_IDENTIFIER  shift 1
	TOKEN_NOT  shift 32
	TOKEN_SUB  shift 33
	TOKEN_OPPAR  shift 34
	TOKEN_OPBRACE  shift 53
	.  error

	paren  goto 37
	and_expr  goto 38
	or_expr  goto 39
	unary_expr  goto 40
	expo_expr  goto 41
	add_expr  goto 42
	mult_expr  goto 43
	expr  goto 54
	primary_expr  goto 45
	compare_expr  goto 46
	inc_expr  goto 47
	ident  goto 48


state 27
	primary_expr : TOKEN_FALSE .  (92)

	.  reduce 92


state 28
	primary_expr : TOKEN_STRING_LITERAL .  (89)

	.  reduce 89


state 29
	primary_expr : TOKEN_CHARACTER_LITERAL .  (90)

	.  reduce 90


state 30
	primary_expr : TOKEN_INTEGER_LITERAL .  (88)

	.  reduce 88


state 31
	primary_expr : TOKEN_TRUE .  (91)

	.  reduce 91


state 32
	unary_expr : TOKEN_NOT . inc_expr  (77)

	TOKEN_FALSE  shift 27
	TOKEN_STRING_LITERAL  shift 28
	TOKEN_CHARACTER_LITERAL  shift 29
	TOKEN_INTEGER_LITERAL  shift 30
	TOKEN_TRUE  shift 31
	TOKEN_IDENTIFIER  shift 1
	TOKEN_OPPAR  shift 34
	TOKEN_OPBRACE  shift 36
	.  error

	paren  goto 37
	primary_expr  goto 45
	inc_expr  goto 55
	ident  goto 48


state 33
	unary_expr : TOKEN_SUB . inc_expr  (78)

	TOKEN_FALSE  shift 27
	TOKEN_STRING_LITERAL  shift 28
	TOKEN_CHARACTER_LITERAL  shift 29
	TOKEN_INTEGER_LITERAL  shift 30
	TOKEN_TRUE  shift 31
	TOKEN_IDENTIFIER  shift 1
	TOKEN_OPPAR  shift 34
	TOKEN_OPBRACE  shift 36
	.  error

	paren  goto 37
	primary_expr  goto 45
	inc_expr  goto 56
	ident  goto 48


state 34
	paren : TOKEN_OPPAR . expr TOKEN_CLPAR  (84)

	TOKEN_FALSE  shift 27
	TOKEN_STRING_LITERAL  shift 28
	TOKEN_CHARACTER_LITERAL  shift 29
	TOKEN_INTEGER_LITERAL  shift 30
	TOKEN_TRUE  shift 31
	TOKEN_IDENTIFIER  shift 1
	TOKEN_NOT  shift 32
	TOKEN_SUB  shift 33
	TOKEN_OPPAR  shift 34
	TOKEN_OPBRACE  shift 36
	.  error

	paren  goto 37
	and_expr  goto 38
	or_expr  goto 39
	unary_expr  goto 40
	expo_expr  goto 41
	add_expr  goto 42
	mult_expr  goto 43
	expr  goto 57
	primary_expr  goto 45
	compare_expr  goto 46
	inc_expr  goto 47
	ident  goto 48


state 35
	decl : ident TOKEN_COLON TOKEN_ARRAY TOKEN_OPBRAK TOKEN_CLBRAK . type2 TOKEN_ASSIGN expr TOKEN_SCOLON  (5)

	TOKEN_STRING  shift 17
	TOKEN_INTEGER  shift 18
	TOKEN_CHAR  shift 19
	TOKEN_ARRAY  shift 20
	TOKEN_BOOLEAN  shift 21
	TOKEN_FUNCTION  shift 22
	TOKEN_VOID  shift 23
	.  error

	type2  goto 58


state 36
	primary_expr : TOKEN_OPBRACE . expr_list_array TOKEN_CLBRACE  (93)

	TOKEN_FALSE  shift 27
	TOKEN_STRING_LITERAL  shift 28
	TOKEN_CHARACTER_LITERAL  shift 29
	TOKEN_INTEGER_LITERAL  shift 30
	TOKEN_TRUE  shift 31
	TOKEN_IDENTIFIER  shift 1
	TOKEN_NOT  shift 32
	TOKEN_SUB  shift 33
	TOKEN_OPPAR  shift 34
	TOKEN_OPBRACE  shift 36
	.  error

	paren  goto 37
	and_expr  goto 38
	or_expr  goto 39
	unary_expr  goto 40
	expo_expr  goto 41
	add_expr  goto 42
	mult_expr  goto 43
	expr  goto 59
	primary_expr  goto 45
	expr_list2  goto 60
	expr_list_array  goto 61
	compare_expr  goto 46
	inc_expr  goto 47
	ident  goto 48


state 37
	inc_expr : paren . TOKEN_INCREMENT  (80)
	inc_expr : paren . TOKEN_DECREMENT  (81)
	inc_expr : paren .  (82)

	TOKEN_INCREMENT  shift 62
	TOKEN_DECREMENT  shift 63
	TOKEN_SCOLON  reduce 82
	TOKEN_GE  reduce 82
	TOKEN_LE  reduce 82
	TOKEN_GT  reduce 82
	TOKEN_LT  reduce 82
	TOKEN_OR  reduce 82
	TOKEN_AND  reduce 82
	TOKEN_EQ  reduce 82
	TOKEN_NE  reduce 82
	TOKEN_ADD  reduce 82
	TOKEN_SUB  reduce 82
	TOKEN_MULT  reduce 82
	TOKEN_DIV  reduce 82
	TOKEN_ASSIGN  reduce 82
	TOKEN_EXPONENTIATION  reduce 82
	TOKEN_MOD  reduce 82
	TOKEN_COMMA  reduce 82
	TOKEN_CLPAR  reduce 82
	TOKEN_CLBRAK  reduce 82
	TOKEN_CLBRACE  reduce 82


state 38
	or_expr : and_expr .  (58)
	and_expr : and_expr . TOKEN_AND compare_expr  (59)

	TOKEN_AND  shift 64
	TOKEN_SCOLON  reduce 58
	TOKEN_OR  reduce 58
	TOKEN_ASSIGN  reduce 58
	TOKEN_COMMA  reduce 58
	TOKEN_CLPAR  reduce 58
	TOKEN_CLBRAK  reduce 58
	TOKEN_CLBRACE  reduce 58


state 39
	expr : or_expr .  (55)
	or_expr : or_expr . TOKEN_OR and_expr  (57)

	TOKEN_OR  shift 65
	TOKEN_SCOLON  reduce 55
	TOKEN_ASSIGN  reduce 55
	TOKEN_COMMA  reduce 55
	TOKEN_CLPAR  reduce 55
	TOKEN_CLBRAK  reduce 55
	TOKEN_CLBRACE  reduce 55


state 40
	expo_expr : unary_expr .  (76)

	.  reduce 76


state 41
	mult_expr : expo_expr .  (74)
	expo_expr : expo_expr . TOKEN_EXPONENTIATION unary_expr  (75)

	TOKEN_EXPONENTIATION  shift 66
	TOKEN_SCOLON  reduce 74
	TOKEN_GE  reduce 74
	TOKEN_LE  reduce 74
	TOKEN_GT  reduce 74
	TOKEN_LT  reduce 74
	TOKEN_OR  reduce 74
	TOKEN_AND  reduce 74
	TOKEN_EQ  reduce 74
	TOKEN_NE  reduce 74
	TOKEN_ADD  reduce 74
	TOKEN_SUB  reduce 74
	TOKEN_MULT  reduce 74
	TOKEN_DIV  reduce 74
	TOKEN_ASSIGN  reduce 74
	TOKEN_MOD  reduce 74
	TOKEN_COMMA  reduce 74
	TOKEN_CLPAR  reduce 74
	TOKEN_CLBRAK  reduce 74
	TOKEN_CLBRACE  reduce 74

